load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "options_proto",
    srcs = [
        "annotations.proto",
        "openapiv3.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

go_proto_library(
    name = "options_go_proto",
    compilers = ["//:go_apiv2"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv3/options",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "options",
    embed = [":options_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv3/options",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":options",
    visibility = ["//visibility:public"],
)
