load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "options_proto_files",
    srcs = [
        "annotations.proto",
        "openapiv2.proto",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "annotations.pb.go",
        "openapiv2.pb.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options",
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
    ],
)

proto_library(
    name = "options_proto",
    srcs = [
        "annotations.proto",
        "openapiv2.proto",
        "openapiv3.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)
