load("@io_bazel_rules_go//go:def.bzl", "go_library")
load(
    "//examples/clients:clients.bzl",
    "swagger_codegen",
    "gen_file_integrity_test",
)

package(default_visibility = ["//visibility:public"])

# keep
go_library(
    name = "go_default_library",
    srcs = [
        ":gen_client",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/clients/abe",
    deps = ["@com_github_go_resty_resty//:go_default_library"],
)

SRCS = [
    "a_bit_of_everything_nested.go",
    "a_bit_of_everything_service_api.go",
    "api_client.go",
    "api_response.go",
    "camel_case_service_name_api.go",
    "configuration.go",
    "echo_rpc_api.go",
    "echo_service_api.go",
    "examplepb_a_bit_of_everything.go",
    "examplepb_body.go",
    "examplepb_numeric_enum.go",
    "nested_deep_enum.go",
    "protobuf_empty.go",
    "sub_string_message.go",
]

swagger_codegen(
    name = "gen_client",
    package_name = "abe",
    out_dir = "gen",
    outputs = ["gen/%s" % f for f in SRCS],
    spec = "//examples/proto/examplepb:a_bit_of_everything.swagger.json",
)

gen_file_integrity_test(
    name = "generated_files_test",
    size = "small",
    generated_dir = "gen",
    generated_files = ["gen/%s" % f for f in SRCS],
    golden_dir = ".",
)
