load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "api_a_bit_of_everything_service.go",
        "api_camel_case_service_name.go",
        "api_echo_rpc.go",
        "client.go",
        "configuration.go",
        "enum_helper.go",
        "model_a_bit_of_everything_nested.go",
        "model_examplepb_a_bit_of_everything.go",
        "model_examplepb_a_bit_of_everything_repeated.go",
        "model_examplepb_body.go",
        "model_examplepb_numeric_enum.go",
        "model_examplepb_update_v2_request.go",
        "model_message_path_enum_nested_path_enum.go",
        "model_nested_deep_enum.go",
        "model_pathenum_path_enum.go",
        "model_protobuf_field_mask.go",
        "model_sub_string_message.go",
        "response.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/clients/abe",
    deps = [
        "//examples/proto/examplepb:go_default_library",
        "//examples/proto/pathenum:go_default_library",
        "//runtime:go_default_library",
        "@com_github_antihax_optional//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
