load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api_client.go",
        "api_response.go",
        "configuration.go",
        "examplepb_response_body_message.go",
        "examplepb_response_body_message_response.go",
        "examplepb_response_body_out.go",
        "examplepb_response_body_out_response.go",
        "examplepb_response_body_req.go",
        "response_body_service_api.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/clients/responsebody",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_resty_resty//:go_default_library"],
)
