load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "gateway.go",
        "handlers.go",
        "main.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/internal/proto/examplepb:go_default_library",
        "//examples/internal/proto/standalone:go_default_library",
        "//runtime:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity:go_default_library",
    ],
)
