load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "doc.go",
        "gateway.go",
        "handlers.go",
        "main.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/internal/proto/examplepb",
        "//examples/internal/proto/standalone",
        "//runtime",
        "@com_github_golang_glog//:glog",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity",
    ],
)

alias(
    name = "go_default_library",
    actual = ":gateway",
    visibility = ["//examples:__subpackages__"],
)
