load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "doc.go",
        "gateway.go",
        "handlers.go",
        "main.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/internal/proto/examplepb",
        "//examples/internal/proto/standalone",
        "//runtime",
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//connectivity",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":gateway",
    visibility = ["//examples:__subpackages__"],
)
