load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:go_grpc_compilers //:go_apiv2, //:go_grpc, //protoc-gen-grpc-gateway:go_gen_grpc_gateway

go_library(
    name = "go_default_library",
    embed = [":helloworld_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/helloworld",
    visibility = ["//examples:__subpackages__"],
)
