load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# gazelle:exclude helloworld.pb.gw.go
# gazelle:exclude helloworld_grpc.pb.go
# gazelle:go_grpc_compilers //:go_apiv2, //:go_grpc, //protoc-gen-grpc-gateway:go_gen_grpc_gateway

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "helloworld_go_proto",
    compilers = [
        "//:go_apiv2",
        "//:go_grpc",
        "//protoc-gen-grpc-gateway:go_gen_grpc_gateway",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/helloworld",
    proto = ":helloworld_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
        "@org_golang_google_protobuf//proto:go_default_library",  #keep
    ],
)

go_library(
    name = "helloworld",
    embed = [":helloworld_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/helloworld",
    visibility = ["//examples:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":helloworld",
    visibility = ["//examples:__subpackages__"],
)
