load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "integration_test.go",
        "main_test.go",
    ],
    deps = [
        "//examples/internal/clients/abe:go_default_library",
        "//examples/internal/clients/echo:go_default_library",
        "//examples/internal/clients/unannotatedecho:go_default_library",
        "//examples/internal/gateway:go_default_library",
        "//examples/internal/proto/examplepb:go_default_library",
        "//examples/internal/proto/pathenum:go_default_library",
        "//examples/internal/proto/sub:go_default_library",
        "//examples/internal/server:go_default_library",
        "//runtime:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes/empty:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
        "//vendor/google.golang.org/genproto/googleapis/rpc/status:go_default_library",
        "//vendor/google.golang.org/genproto/protobuf/field_mask:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/protobuf/encoding/protojson:go_default_library",
        "//vendor/google.golang.org/protobuf/proto:go_default_library",
        "//vendor/google.golang.org/protobuf/testing/protocmp:go_default_library",
        "//vendor/google.golang.org/protobuf/types/known/structpb:go_default_library",
    ],
)
