load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = [
        "client_test.go",
        "integration_test.go",
        "main_test.go",
    ],
    deps = [
        "//examples/internal/clients/abe/client",
        "//examples/internal/clients/abe/client/a_bit_of_everything",
        "//examples/internal/clients/abe/models",
        "//examples/internal/clients/echo/client",
        "//examples/internal/clients/echo/client/echo_service",
        "//examples/internal/clients/echo/models",
        "//examples/internal/clients/unannotatedecho/client",
        "//examples/internal/clients/unannotatedecho/client/unannotated_echo_service",
        "//examples/internal/clients/unannotatedecho/models",
        "//examples/internal/gateway",
        "//examples/internal/proto/examplepb",
        "//examples/internal/proto/pathenum",
        "//examples/internal/proto/sub",
        "//examples/internal/server",
        "//runtime",
        "@com_github_go_openapi_runtime//client",
        "@com_github_go_openapi_strfmt//:strfmt",
        "@com_github_google_go_cmp//cmp",
        "@com_github_rogpeppe_fastuuid//:fastuuid",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)
