load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "server",
    srcs = [
        "a_bit_of_everything.go",
        "echo.go",
        "fieldmask_helper.go",
        "flow_combination.go",
        "main.go",
        "no_body_post.go",
        "non_standard_names.go",
        "responsebody.go",
        "unannotatedecho.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/server",
    deps = [
        "//examples/internal/proto/examplepb",
        "//examples/internal/proto/oneofenum",
        "//examples/internal/proto/pathenum",
        "//examples/internal/proto/standalone",
        "//examples/internal/proto/sub",
        "//examples/internal/proto/sub2",
        "//runtime",
        "@com_github_rogpeppe_fastuuid//:fastuuid",
        "@org_golang_google_genproto_googleapis_api//httpbody",
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":server",
    visibility = ["//examples:__subpackages__"],
)
